fix small device view alignment problems, all boxes are aligned when the page is shrinked

--- a/index.css
+++ b/index.css
@@ -39,6 +39,7 @@ button, input[type="text"] {
 #reset-data{
     float:right;
     margin-top:20px;
+    margin-right:20px;
 }
 button{
     display:inline-block;
@@ -59,6 +60,8 @@ main .row {
   height: 400px;
   text-align: center;
   margin-right:20px;
+  margin-left:20px;
+  margin-bottom:30px;
   border:solid 1px lightgray;
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
@@ -67,6 +70,7 @@ main .row {
   text-align: center;
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   margin-left:20px;
+  margin-right:20px;
   border:solid 1px lightgray;
 }
 
@@ -74,6 +78,7 @@ main .row {
   height: 200px;
   text-align: center;
   margin-left:20px;
+  margin-right:20px;
   margin-top:30px;
   border:solid 1px lightgray;
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
@@ -136,3 +141,5 @@ main .row {
 	text-decoration: none;
 	color: inherit;
 }
+
+
